--- a/sentimentAnalyzeServer/package.json
+++ b/sentimentAnalyzeServer/package.json
@@ -5,6 +5,7 @@
   "main": "sentimentAnalyzerServer.js",
   "scripts": {
     "start": "node sentimentAnalyzerServer.js",
+    "dev": "nodemon sentimentAnalyzerServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
